--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -24,7 +24,8 @@
   "AuthForm": {
     "email": "Email",
     "password": "Password",
-    "name": "Username"
+    "name": "Username",
+    "confirmpassword": "Comfirm password"
   },
   "Button": {
     "please_wait": "Please wait..",
