--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -3,7 +3,8 @@
 		"title": "คัสตอมไอเอ",
 		"signup": "สมัครสมาชิก",
 		"login": "เข้าสู่ระบบ",
-		"home": "หน้าหลัก"
+		"home": "หน้าหลัก",
+		"dataset": "ชุดข้อมูล"
 	},
 	"HomePage": {
 		"login": "เข้าสู่ระบบ",
