--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -4,7 +4,8 @@
 		"signup": "สมัครสมาชิก",
 		"login": "เข้าสู่ระบบ",
 		"home": "หน้าหลัก",
-		"dataset": "ชุดข้อมูล"
+		"dataset": "ชุดข้อมูล",
+		"setting": "ตั้งค่า"
 	},
 	"HomePage": {
 		"login": "เข้าสู่ระบบ",
@@ -16,9 +17,9 @@
 		"have_account": "มีบัญชีอยู่แล้ว? เข้าสู่ระบบที่นี่"
 	},
 	"Login": {
-		"signinwithgoogle": "เข้าสู่ระบบโดย Google",
-		"signinwithgithub": "เข้าสู่ระบบโดย Github",
-		"orsigninwithemail": "หรือใช้อีเมลและรหัสผ่าน",
+		"signInWithGoogle": "เข้าสู่ระบบโดย Google",
+		"signInWithGitHub": "เข้าสู่ระบบโดย Github",
+		"orSignInWithEmail": "หรือใช้อีเมลและรหัสผ่าน",
 		"login_description": "ลงชื่อเข้าใช้บัญชีของคุณโดยใช้หนึ่งในวิธีต่อไปนี้",
 		"forgot_password": "",
 		"create_account": "สร้างบัญชีผู้ใช้งานใหม่"
@@ -32,5 +33,15 @@
 	"Button": {
 		"please_wait": "โปรดรอสักครู่..",
 		"submitted": "ยืนยันสำเร็จ"
+	},
+	"Upload": {
+		"Popup": {
+			"Upload": "อัปโหลด"
+		},
+		"Dialog": {
+			"DropTheFileHere": "วางไฟล์ที่นี่ ...",
+			"fileIsTooBig": "ไฟล์นี้ใหญ่เกินไปที่จะอัปโหลด",
+			"DropFileHere": "ลากและวางไฟล์ที่นี่ หรือคลิกเพื่อเลือกไฟล์"
+		}
 	}
 }
