chore: upload file on dataset

--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -5,7 +5,8 @@
 		"login": "login",
 		"home": "home",
 		"dataset": "dataset",
-		"setting": "setting"
+		"setting": "setting",
+		"workflow": "workflow"
 	},
 	"HomePage": {
 		"login": "login",
