--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -5,7 +5,8 @@
 		"login": "เข้าสู่ระบบ",
 		"home": "หน้าหลัก",
 		"dataset": "ชุดข้อมูล",
-		"setting": "ตั้งค่า"
+		"setting": "ตั้งค่า",
+		"workflow": "การประมวลผล"
 	},
 	"HomePage": {
 		"login": "เข้าสู่ระบบ",
