feat: image preprocessing section

--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -8,6 +8,12 @@
 		"setting": "setting",
 		"workflow": "workflow"
 	},
+	"navbar": {
+		"home": "Home",
+		"workflow": "Workflow",
+		"dataset": "Dataset",
+		"preset": "Preset"
+	},
 	"HomePage": {
 		"login": "login",
 		"get_started": "Get Started",
