--- a/apps/frontend/src/locale/en-US/settings.json
+++ b/apps/frontend/src/locale/en-US/settings.json
@@ -13,6 +13,9 @@
 	"Security": {
 		"AccountSecurity": "Account Security",
 		"TwoFactorAuthentication": "Two Factor Authentication",
-		"LinkAccounts": "Link Accounts"
+		"LinkAccounts": "Link Accounts",
+		"connected": "Connected",
+		"unknown": "Unknown",
+		"linkWith": "Link with"
 	}
 }
