--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -4,6 +4,7 @@
 		"signup": "สมัครสมาชิก",
 		"login": "เข้าสู่ระบบ",
 		"home": "หน้าหลัก",
+		"create": "สร้าง",
 		"dataset": "ชุดข้อมูล",
 		"setting": "ตั้งค่า",
 		"workflow": "การประมวลผล"
@@ -12,11 +13,18 @@
 		"home": "หน้าหลัก",
 		"workflow": "การทำงาน",
 		"dataset": "ชุดข้อมูล",
-		"preset": "ชุดตั้งล่วงหน้า"
+		"preset": "ชุดตั้งล่วงหน้า",
+		"image-preprocessing": "การประมวลผลภาพเบื้องต้น",
+		"data-augmentation": "การเพิ่มข้อมูล",
+		"model": "โมเดล",
+		"help": "ช่วยเหลือ",
+		"settings": "ตั้งค่า",
+		"feature-config": "การตั้งค่าคุณสมบัติ"
 	},
 	"HomePage": {
 		"login": "เข้าสู่ระบบ",
 		"get_started": "เริ่มใช้งาน",
+		"GoToMain": "ไปยังหน้าหลัก",
 		"signup": "สมัครสมาชิก"
 	},
 	"SignUp": {
