--- a/apps/frontend/src/locale/th-TH/settings.json
+++ b/apps/frontend/src/locale/th-TH/settings.json
@@ -13,6 +13,9 @@
 	"Security": {
 		"AccountSecurity": "ความปลอดภัยของบัญชี",
 		"TwoFactorAuthentication": "การยืนยันตัวตนสองขั้นตอน",
-		"LinkAccounts": "เชื่อมโยงบัญชี"
+		"LinkAccounts": "เชื่อมโยงบัญชี",
+		"connected": "เชื่อมต่อแล้ว",
+		"unknown": "ไม่ทราบ",
+		"linkWith": "ลิ้งก์กับ"
 	}
 }
