--- a/apps/frontend/src/locale/th-TH/settings.json
+++ b/apps/frontend/src/locale/th-TH/settings.json
@@ -2,7 +2,7 @@
 	"Tab": {
 		"Account": "บัญชี",
 		"Security": "ความปลอดภัย",
-		"Accessibility": "การเข้าถึง"
+		"Appearance": "รูปร่าง"
 	},
 	"Account": {
 		"ProfileInformation": "ข้อมูลโปรไฟล์",
