--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -7,7 +7,8 @@
 		"dataset": "dataset",
 		"create": "create",
 		"setting": "setting",
-		"workflow": "workflow"
+		"workflow": "workflow",
+		"annotation": "annotation"
 	},
 	"navbar": {
 		"home": "Home",
