--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -7,7 +7,8 @@
 		"create": "สร้าง",
 		"dataset": "ชุดข้อมูล",
 		"setting": "ตั้งค่า",
-		"workflow": "การประมวลผล"
+		"workflow": "การประมวลผล",
+		"annotation": "รูปภาพ"
 	},
 	"navbar": {
 		"home": "หน้าหลัก",
