chore: try to add image to mdx

--- a/apps/frontend/src/content/learning/en/basic_ai.mdx
+++ b/apps/frontend/src/content/learning/en/basic_ai.mdx
@@ -18,6 +18,8 @@ AI has evolved through different eras with the goal of achieving capabilities cl
 
 AI can be categorized in two ways:
 
+![AI Image1](./../../image/basic_ai1.png)
+
 ### Categorization by Capability
 
 - **Artificial Narrow Intelligence (ANI)**: AI designed for specific tasks, such as recommendation systems or voice assistants like Siri and Alexa.
@@ -35,6 +37,8 @@ AI can be categorized in two ways:
 
 Some types of AI are still in the research phase, while others are already in use. AI development is no longer a distant concept—individuals can build AI at home with the right knowledge and programming skills.
 
+![AI Image2](./../../image/basic_ai2.png)
+
 ## Machine Learning (ML) and Deep Learning (DL)
 
 Modern AI is mainly divided into two categories:
@@ -47,6 +51,8 @@ ML is a technique for developing systems that can learn from data and improve pe
 - Product recommendations on online platforms
 - Speech recognition
 
+![AI Image3](./../../image/basic_ai3.png)
+
 ### Deep Learning (DL)
 
 DL is a subset of ML that focuses on using multi-layered artificial neural networks to simulate the human brain. It is used for complex data processing, such as:
@@ -56,6 +62,8 @@ DL is a subset of ML that focuses on using multi-layered artificial neural netwo
 - Autonomous driving
 
 The main difference between ML and DL is that DL can automatically learn features from data without human-defined attributes.
+
+![AI Image4](./../../image/basic_ai4.png)
 
 ## Training AI Models
 
