feat: image to learning page

--- a/apps/frontend/src/content/learning/en/basic_ai.mdx
+++ b/apps/frontend/src/content/learning/en/basic_ai.mdx
@@ -18,7 +18,7 @@ AI has evolved through different eras with the goal of achieving capabilities cl
 
 AI can be categorized in two ways:
 
-![AI Image1](./../../image/basic_ai1.png)
+![AI Image1](/images/basic_ai1.png)
 
 ### Categorization by Capability
 
@@ -37,7 +37,7 @@ AI can be categorized in two ways:
 
 Some types of AI are still in the research phase, while others are already in use. AI development is no longer a distant concept—individuals can build AI at home with the right knowledge and programming skills.
 
-![AI Image2](./../../image/basic_ai2.png)
+![AI Image2](/images/basic_ai2.png)
 
 ## Machine Learning (ML) and Deep Learning (DL)
 
@@ -51,7 +51,7 @@ ML is a technique for developing systems that can learn from data and improve pe
 - Product recommendations on online platforms
 - Speech recognition
 
-![AI Image3](./../../image/basic_ai3.png)
+![AI Image3](/images/basic_ai3.png)
 
 ### Deep Learning (DL)
 
@@ -63,7 +63,7 @@ DL is a subset of ML that focuses on using multi-layered artificial neural netwo
 
 The main difference between ML and DL is that DL can automatically learn features from data without human-defined attributes.
 
-![AI Image4](./../../image/basic_ai4.png)
+![AI Image4](/images/basic_ai4.png)
 
 ## Training AI Models
 
