--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -20,7 +20,8 @@
 		"model": "Model",
 		"help": "Help",
 		"settings": "Settings",
-		"feature-config": "Feature Configuration"
+		"feature-config": "Feature Configuration",
+		"logout": "Log out"
 	},
 	"HomePage": {
 		"login": "Login",
