--- a/apps/frontend/src/locale/th-TH/home.json
+++ b/apps/frontend/src/locale/th-TH/home.json
@@ -20,7 +20,8 @@
 		"model": "โมเดล",
 		"help": "ช่วยเหลือ",
 		"settings": "ตั้งค่า",
-		"feature-config": "การตั้งค่าคุณสมบัติ"
+		"feature-config": "การตั้งค่าคุณสมบัติ",
+		"logout": "ออกจากระบบ"
 	},
 	"HomePage": {
 		"login": "เข้าสู่ระบบ",
