hotfix: add Tools section to sidebar and update translations for new feature

--- a/apps/frontend/src/locale/en-US/home.json
+++ b/apps/frontend/src/locale/en-US/home.json
@@ -19,6 +19,7 @@
 		"data-augmentation": "Augmentation",
 		"model": "Model",
 		"help": "Help",
+		"tool": "Tools",
 		"settings": "Settings",
 		"feature-config": "Feature Configuration",
 		"logout": "Log out"
