fix: revamp metadata to array

--- a/apps/frontend/src/content/learning/en/basic_ai.mdx
+++ b/apps/frontend/src/content/learning/en/basic_ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is AI?
-description: Learn the basics and get up and running quickly with our platform
-date: 2023-04-15
+description: Learn the basics and get up and running quickly on ai
+date: 2025-05-02
 author: Documentation Team
 tags: [basics, introduction, AI]
 ---
