--- a/apps/frontend/src/content/learning/th/basic_ai.mdx
+++ b/apps/frontend/src/content/learning/th/basic_ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: AI คืออะไร?
-description: เรียนรู้พื้นฐานและโครงสร้างการทำงานของแพลตฟอร์ม
-date: 2023-04-15
+description: เรียนรู้พื้นฐานและโครงสร้างการทำงานของ AI
+date: 2025-05-02
 author: Documentation Team
 tags: [basics, introduction, AI]
 ---
