--- a/apps/frontend/src/content/learning/th/data-preparation.mdx
+++ b/apps/frontend/src/content/learning/th/data-preparation.mdx
@@ -1,61 +1,88 @@
 ---
-title: การพัฒนาโมเดลปัญญาประดิษฐ์
-description: แนะนำเกี่ยวกับการเตรียมข้อมูล การฝึกฝนโมเดล และการประเมินผลโมเดล AI
+title: การเตรียมข้อมูล
+description: แนะนำเกี่ยวกับการเตรียมข้อมูลในโมเดล AI
 date: 2025-05-02
 author: Documentation Team
-tags: [AI, model]
----
-> การพัฒนาโมเดลปัญญาประดิษฐ์ (AI) ประกอบด้วยสามขั้นตอนสำคัญ ดังนี้:
-
-## 1. การเตรียมชุดข้อมูล (Data Preparation)
-
-ขั้นตอนนี้เป็นรากฐานของการสร้างโมเดล AI ที่มีประสิทธิภาพ  
-การเตรียมข้อมูลที่ดีช่วยให้โมเดลสามารถเรียนรู้และทำงานได้อย่างถูกต้อง
-
-<Callout variant="info">
-เนื่องจากข้อมูลเป็นแหล่งที่มาที่โมเดลจะใช้ในการเรียนรู้  
-หากการจัดเตรียมข้อมูลไม่ดีพอ ประสิทธิภาพของโมเดลก็จะลดลงตามไปด้วย
-</Callout>
-
-## 2. การฝึกฝนโมเดล (Model Training)
-
-ในขั้นตอนนี้ โมเดลจะได้รับการฝึกฝนด้วยข้อมูลที่เตรียมไว้  
-เพื่อให้สามารถเรียนรู้รูปแบบและความสัมพันธ์ภายในข้อมูล
-
-## 3. การประเมินผลโมเดล (Model Evaluation)
-
-หลังจากการฝึกฝน โมเดลจะถูกทดสอบและประเมินผล  
-เพื่อวัดประสิทธิภาพและความแม่นยำในการทำงาน
-
+tags: [AI]
 ---
 
-## ประเภทของโมเดลสำหรับงานภาพ
+## 1. การเตรียมข้อมูล
 
-ในการสร้างโมเดล AI ที่เกี่ยวข้องกับรูปภาพ สามารถแบ่งออกเป็นสองหมวดหมู่หลัก ดังนี้:
+การเตรียมข้อมูลเป็นหนึ่งในขั้นตอนที่สำคัญที่สุดในการพัฒนาโมเดล AI ซึ่งเกี่ยวข้องกับกระบวนการต่างๆ ที่ช่วยให้ข้อมูลสะอาด ถูกต้อง และมีรูปแบบที่เหมาะสมสำหรับการฝึกฝนโมเดล คุณภาพของข้อมูลมีผลโดยตรงต่อประสิทธิภาพและความสำเร็จของโมเดลที่ได้รับการฝึกฝน ด้านล่างนี้คือลำดับขั้นตอนหลักในการเตรียมข้อมูล:
 
-### 1. การจำแนกประเภทภาพ (Image Classification)
+### 1.1 การเก็บข้อมูล
 
-เป็นการระบุว่าภาพนั้นเป็นประเภทหรือหมวดหมู่ใด เช่น  
-การจำแนกภาพของสัตว์ว่าเป็นสุนัขหรือแมว
+ก่อนที่จะเริ่มกระบวนการเตรียมข้อมูล ข้อมูลจะต้องถูกรวบรวมก่อน ขึ้นอยู่กับประเภทของโมเดล AI ข้อมูลนี้อาจมาจากแหล่งต่างๆ เช่น:
 
-### 2. การตรวจจับวัตถุและการแบ่งส่วนภาพ (Object Detection & Segmentation)
+- ชุดข้อมูลสาธารณะ (เช่น ImageNet, COCO)
+- ข้อมูลภายในขององค์กร (เช่น ข้อมูลธุรกรรม, บันทึก, การโต้ตอบกับลูกค้า)
+- การดึงข้อมูลจากเว็บ (เช่น การเก็บข้อมูลจากเว็บไซต์)
+- อุปกรณ์ IoT หรือเซ็นเซอร์ (เช่น ข้อมูลอุณหภูมิ, เสียง, การเคลื่อนไหว)
 
-เป็นการระบุและระบุตำแหน่งของวัตถุภายในภาพ  
-รวมถึงการแบ่งส่วนของวัตถุเหล่านั้น
+สิ่งสำคัญคือต้องเก็บข้อมูลที่มีความหลากหลายและเป็นตัวแทนเพื่อให้แน่ใจว่าโมเดลจะสามารถทำงานได้ดีเมื่อเจอกับข้อมูลใหม่
+
+![data1](/images/data-preparation1.png)
+
+### 1.2 การทำความสะอาดข้อมูล
+
+เมื่อข้อมูลถูกรวบรวมแล้ว จะต้องทำการทำความสะอาดเพื่อกำจัดความไม่สอดคล้อง ความผิดปกติ หรือข้อมูลที่ไม่เกี่ยวข้อง การทำความสะอาดข้อมูลมักจะประกอบไปด้วย:
+
+- **การจัดการกับค่าที่หายไป**: ข้อมูลที่หายไปสามารถจัดการได้หลายวิธี เช่น การเติมค่า, การลบแถวหรือคอลัมน์ที่ขาดหายไป, หรือใช้เทคนิคที่รองรับค่าที่หายไป
+- **การลบข้อมูลซ้ำ**: ข้อมูลซ้ำอาจทำให้ผลลัพธ์ของโมเดลเบี่ยงเบนไป ดังนั้นต้องระบุและลบข้อมูลที่ซ้ำ
+- **การกรองค่าเบี่ยงเบน (Outliers)**: ค่าเบี่ยงเบน (ข้อมูลที่แตกต่างจากส่วนใหญ่) อาจส่งผลกระทบต่อประสิทธิภาพของโมเดล ดังนั้นควรลบออกหรือลงมือจัดการอย่างเหมาะสม
+- **การทำให้ค่ามีมาตรฐานหรือการทำปกติ**: ค่าของข้อมูลควรได้รับการปรับให้เป็นมาตรฐานเดียวกัน โดยเฉพาะกับข้อมูลตัวเลข เพื่อหลีกเลี่ยงการเรียนรู้ที่มีอคติ เทคนิคที่ใช้ได้แก่ การปรับขนาด Min-Max, การทำ Z-score normalization หรือการใช้การแปลงแบบลอการิธึม
+
+### 1.3 การแปลงข้อมูล
+
+การแปลงข้อมูลเกี่ยวข้องกับการเปลี่ยนรูปแบบหรือโครงสร้างของข้อมูลให้เหมาะสมสำหรับการใช้งานในโมเดลการเรียนรู้ เช่น:
+
+- **การเข้ารหัสตัวแปรเชิงหมวดหมู่ (Categorical Variables)**: ข้อมูลเชิงหมวดหมู่ต้องถูกแปลงเป็นค่าตัวเลข โดยใช้เทคนิคต่างๆ เช่น การเข้ารหัสแบบ One-hot หรือการเข้ารหัสแบบ Label Encoding
+- **การสร้างฟีเจอร์ใหม่ (Feature Engineering)**: การสร้างฟีเจอร์ใหม่จากฟีเจอร์เดิมสามารถช่วยให้โมเดลเรียนรู้ได้มีประสิทธิภาพมากขึ้น เช่น การดึงวันในสัปดาห์จากเวลาของข้อมูล หรือการสร้างตัวแปรใหม่จากการรวมข้อมูลที่มีอยู่
+- **การเพิ่มข้อมูล (Data Augmentation)**: สำหรับข้อมูลภาพ เทคนิคการเพิ่มข้อมูล เช่น การหมุน, การพลิก, การปรับขนาด และการปรับสี สามารถเพิ่มขนาดชุดข้อมูลและช่วยป้องกันการฝึกฝนที่เกินขอบเขต
+
+### 1.4 การทำการระบุข้อมูล (Annotation)
+
+สำหรับงานที่ใช้การเรียนรู้แบบมีการกำกับ (Supervised Learning) การทำการระบุข้อมูล (Annotation) เป็นขั้นตอนที่สำคัญ ซึ่งจะเกี่ยวข้องกับการติดป้ายหรือแท็กให้กับข้อมูล ในงานที่เกี่ยวข้องกับภาพ อาจมีการทำดังนี้:
+
+- **การจำแนกประเภทภาพ**: การติดป้ายประเภทที่ถูกต้องให้กับภาพ (เช่น สุนัข, แมว, รถ)
+- **การตรวจจับวัตถุ**: การวาดกรอบรอบๆ วัตถุและการระบุชื่อ
+- **การแบ่งส่วนภาพ**: การติดป้ายให้กับแต่ละพิกเซลในภาพเพื่อระบุว่าอยู่ในส่วนใดของวัตถุหรือคลาส
+
+ความแม่นยำและคุณภาพของการระบุข้อมูลมีความสำคัญในการฝึกฝนโมเดล หากการระบุข้อมูลไม่ถูกต้องจะทำให้โมเดลได้รับการฝึกฝนที่ไม่ดี
+
+![data2](/images/data-preparation2.png)
+
+### 1.5 การแบ่งข้อมูล
+
+เมื่อข้อมูลได้รับการเตรียมพร้อมแล้ว จะต้องมีการแบ่งข้อมูลออกเป็นส่วนต่างๆ สำหรับการฝึกฝน, การทดสอบ และการตรวจสอบ (Validation) โดยการแบ่งข้อมูลทั่วไปมีอัตราส่วนดังนี้:
+
+- **ชุดข้อมูลสำหรับการฝึกฝน (Training Set)**: 70-80% ของข้อมูลใช้สำหรับการฝึกฝนโมเดล
+- **ชุดข้อมูลสำหรับการตรวจสอบ (Validation Set)**: 10-15% ของข้อมูลใช้ในการปรับแต่งพารามิเตอร์ของโมเดลและประเมินผลระหว่างการฝึกฝน
+- **ชุดข้อมูลสำหรับการทดสอบ (Test Set)**: 10-15% ของข้อมูลใช้ในการประเมินประสิทธิภาพของโมเดลหลังจากการฝึกฝน ข้อมูลชุดนี้ควรถูกแยกออกจากการใช้งานในระหว่างการฝึกฝน
+
+การแบ่งข้อมูลช่วยให้มั่นใจได้ว่าโมเดลจะสามารถทำนายข้อมูลใหม่ได้ดี
+
+### 1.6 การปรับสมดุลข้อมูล
+
+ในหลายๆ ชุดข้อมูลที่มีการใช้ในโลกจริง อาจพบว่าแต่ละคลาสมีการกระจายไม่สมดุล ซึ่งอาจทำให้โมเดลมีอคติและทำงานไม่ดีในคลาสที่มีสัดส่วนน้อย การแก้ไขปัญหานี้สามารถทำได้ด้วยวิธีต่างๆ เช่น:
+
+- **การสุ่มตัวอย่างซ้ำ (Resampling)**: การเพิ่มข้อมูลในคลาสที่มีจำนวนน้อยหรือการลดข้อมูลในคลาสที่มีจำนวนมาก
+- **การสร้างข้อมูลจำลอง (Synthetic Data Generation)**: เทคนิคเช่น SMOTE (Synthetic Minority Over-sampling Technique) ใช้เพื่อสร้างตัวอย่างข้อมูลที่จำลองจากคลาสที่มีจำนวนน้อย
+- **การกำหนดน้ำหนักคลาส (Class Weighting)**: หลายๆ อัลกอริธึมการเรียนรู้สามารถกำหนดน้ำหนักให้กับคลาสต่างๆ เพื่อจัดการกับข้อมูลที่ไม่สมดุล
+
+### 1.7 การตรวจสอบข้อมูล
+
+ก่อนที่จะเริ่มฝึกฝนโมเดล สิ่งสำคัญคือต้องตรวจสอบคุณภาพของข้อมูลที่เตรียมไว้ โดยสามารถทำได้ดังนี้:
+
+- **การวิเคราะห์ข้อมูลเบื้องต้น (Exploratory Data Analysis - EDA)**: การแสดงภาพข้อมูลเพื่อทำความเข้าใจการกระจาย ความสัมพันธ์ และรูปแบบของข้อมูล ช่วยในการระบุปัญหาต่างๆ เช่น การกระจายข้อมูลที่เบี่ยงเบน, ข้อมูลที่ขาดหายไป, และข้อมูลที่ผิดปกติ
+- **การข้ามการตรวจสอบ (Cross-validation)**: การใช้ k-fold cross-validation เพื่อให้แน่ใจว่าการแบ่งข้อมูลเป็นไปอย่างถูกต้องและสม่ำเสมอ ช่วยให้ประเมินประสิทธิภาพของโมเดลจากชุดข้อมูลต่างๆ
 
 ---
 
-## การทำ Annotation ให้กับข้อมูล
+### สรุป
 
-ในการจัดเตรียมชุดข้อมูลสำหรับงานเหล่านี้ จำเป็นต้องทำการใส่คำอธิบายประกอบ (annotation)  
-เพื่อระบุชนิดและลักษณะของข้อมูลอย่างถูกต้อง ทำให้โมเดลสามารถเรียนรู้ได้อย่างมีประสิทธิภาพ
+การเตรียมข้อมูลเป็นกระบวนการที่ต้องทำซ้ำและดำเนินไปอย่างต่อเนื่อง ซึ่งต้องใช้การพิจารณาหลายปัจจัย การเตรียมข้อมูลที่ดีจะช่วยปรับปรุงคุณภาพของโมเดล AI โดยทำให้ข้อมูลสะอาด ถูกต้อง และเป็นตัวแทนของปัญหาที่กำลังศึกษา การลงทุนเวลาและความพยายามในขั้นตอนการเตรียมข้อมูลจะช่วยให้ได้โมเดลที่มีความแม่นยำและเชื่อถือได้ในระยะยาว
 
-การทำ annotation ควรมีความถูกต้องและใกล้เคียงกับความเป็นจริงมากที่สุด เช่น:
-
-- หากเป็นงานจำแนกประเภทภาพ ควรระบุชนิดของรูปภาพอย่างแม่นยำ
-- หากเป็นงานตรวจจับวัตถุหรือการแบ่งส่วนภาพ ควรตีกรอบวัตถุให้ตรงและแม่นยำ ไม่ขาดหรือเกินส่วนใดส่วนหนึ่ง
-
-<Callout variant="info">
-การเตรียมข้อมูลที่มีคุณภาพสูง และการทำ annotation อย่างถูกต้อง  
-เป็นปัจจัยสำคัญที่ส่งผลต่อความสำเร็จของโมเดล AI
+<Callout type="info">
+จำไว้ว่า ชุดข้อมูลที่เตรียมไว้อย่างดีเป็นตัวบ่งชี้ที่แข็งแกร่งที่สุดของความสำเร็จของโมเดล การใช้เวลาในการเตรียมข้อมูลให้เพียงพอก่อนที่จะเริ่มการฝึกฝนโมเดลเป็นสิ่งสำคัญ
 </Callout>
