--- a/apps/frontend/src/content/learning/th/platform.mdx
+++ b/apps/frontend/src/content/learning/th/platform.mdx
@@ -14,13 +14,13 @@ tags: [basics, introduction, platform]
 แพลตฟอร์มนี้ถูกออกแบบมาเพื่อรองรับผู้เริ่มต้นโดยเฉพาะ โดยมีทั้งเนื้อหาทฤษฎีและเครื่องมือปฏิบัติจริง ครอบคลุมตั้งแต่พื้นฐานไปจนถึงการสร้างโมเดลใช้งานได้จริง
 </Callout>
 
-## 🔧 โครงสร้างระบบการเรียนรู้
+## โครงสร้างระบบการเรียนรู้
 
 ระบบ Learning ของเราถูกออกแบบโดยยึดตามกระบวนการพัฒนา AI อย่างเป็นระบบ แบ่งออกเป็น 4 ส่วนหลักดังต่อไปนี้:
 
 <Separator className="my-6" />
 
-## 1. 🧠 พื้นฐานของ AI
+## 1. พื้นฐานของ AI
 
 เนื้อหาส่วนแรกจะปูพื้นความเข้าใจเกี่ยวกับ AI ตั้งแต่ต้น:
 
@@ -38,28 +38,28 @@ tags: [basics, introduction, platform]
 
 ---
 
-## 2. 🗂️ การจัดเตรียมข้อมูล (Data Preparation)
+## 2. การจัดเตรียมข้อมูล (Data Preparation)
 
 ข้อมูลเป็นปัจจัยสำคัญที่กำหนดความแม่นยำของโมเดล AI การเรียนรู้ในส่วนนี้จะครอบคลุมการจัดการข้อมูลในทุกมิติ:
 
-### 📸 Image Preprocessing
+### Image Preprocessing
 
 - การปรับขนาดและความละเอียดของภาพ
 - การปรับสมดุลสีและความคมชัด
 - การแปลงฟอร์แมตภาพให้เหมาะสมกับโมเดล
 - การลดสัญญาณรบกวน (Noise Reduction)
 
-### 🔁 Data Augmentation
+### Data Augmentation
 
 - เทคนิคเพิ่มความหลากหลายของชุดข้อมูล เช่น การหมุนภาพ, ตัดบางส่วน, ปรับความสว่าง
 - การจำลองข้อมูลใหม่จากข้อมูลต้นฉบับ
 
-### 🧬 Feature Extraction
+### Feature Extraction
 
 - การดึงคุณลักษณะสำคัญจากข้อมูล เช่น ขอบภาพ, ความถี่, หรือลักษณะเชิงสถิติ
 - เตรียมข้อมูลให้อยู่ในรูปแบบที่โมเดลสามารถเข้าใจได้
 
-### 🎯 Feature Selection
+### Feature Selection
 
 - การเลือกใช้เฉพาะคุณลักษณะที่จำเป็น
 - ลดความซับซ้อนของข้อมูลเพื่อประหยัดทรัพยากรและเพิ่มความแม่นยำ
@@ -68,16 +68,16 @@ tags: [basics, introduction, platform]
 
 ---
 
-## 3. ⚙️ การฝึกฝนโมเดล (Model Training)
+## 3. การฝึกฝนโมเดล (Model Training)
 
 ส่วนนี้เป็นการลงมือสร้างโมเดล AI โดยตรง ผ่านกระบวนการฝึกฝนและปรับจูนโมเดล:
 
-### 🧩 Model Selection
+### Model Selection
 
 - การเลือกโมเดลที่เหมาะสม เช่น Decision Tree, CNN, หรือ Pre-trained Models
 - พิจารณาข้อดีข้อเสียของแต่ละโมเดลต่อปัญหาที่ต้องการแก้ไข
 
-### 🎛️ Hyperparameter Adjusting
+### Hyperparameter Adjusting
 
 - การกำหนดค่าพารามิเตอร์หลัก เช่น:
   - Learning Rate
@@ -85,7 +85,7 @@ tags: [basics, introduction, platform]
   - Batch Size
   - Loss Function
 
-### 🏋️‍♀️ Training Process
+### Training Process
 
 - การฝึกฝนโมเดลบนข้อมูลที่เตรียมไว้
 - การดูกราฟการเรียนรู้ (Learning Curve)
@@ -95,16 +95,16 @@ tags: [basics, introduction, platform]
 
 ---
 
-## 4. 📊 การวัดผลและปรับปรุงโมเดล (Evaluation & Optimization)
+## 4. การวัดผลและปรับปรุงโมเดล (Evaluation & Optimization)
 
 หลังจากฝึกฝนโมเดลแล้ว ขั้นตอนต่อไปคือการประเมินผลและหาวิธีปรับปรุงให้ดีขึ้น:
 
-### 🧪 Evaluation Metrics
+### Evaluation Metrics
 
 - ใช้ตัวชี้วัดมาตรฐาน เช่น Accuracy, Precision, Recall และ F1-score
 - วิเคราะห์ความสามารถในการทำนายของโมเดลในสถานการณ์จริง
 
-### 📉 Confusion Matrix
+### Confusion Matrix
 
 - แสดงผลลัพธ์แบบละเอียดในรูปแบบเมทริกซ์
 - วิเคราะห์จุดอ่อนของโมเดล เช่น False Positive หรือ False Negative
@@ -119,7 +119,7 @@ tags: [basics, introduction, platform]
 
 ---
 
-## 🧭 พร้อมหรือยังที่จะเริ่มต้นเส้นทางการเรียนรู้ AI ของคุณ?
+## พร้อมหรือยังที่จะเริ่มต้นเส้นทางการเรียนรู้ AI ของคุณ?
 
 การเรียนรู้ผ่านระบบของเราจะช่วยให้คุณสามารถพัฒนาโมเดล AI ได้อย่างมั่นใจตั้งแต่วันแรก ทั้งในแง่ของความเข้าใจเชิงทฤษฎี และทักษะเชิงปฏิบัติ พร้อมต่อยอดสู่การพัฒนา AI ที่ใช้งานได้จริงในอนาคต
 
